# Amadeus

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py
backend/app/agents/: executor.py  memory.py  orchestrator.py  planner.py  proactive.py
backend/app/api/: chat.py  debug.py  memories.py  proactive.py
backend/app/core/: config.py  llm.py  logger.py
backend/app/memory/: store.py  vector.py
backend/app/models/: schemas.py
backend/app/tools/: base.py  calendar.py  search.py  todo.py
docs/: agent_project_requirements_and_architecture.md  agent_project_simplified.md  项目演进.md
frontend/: app.py
scripts/: init_db.py  seed_demo_data.py
