[project]
name = "lifeos"
version = "0.1.0"
description = "LifeOS - Personal AI Agent System"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # LLM
    "openai>=1.0",
    "anthropic>=0.30.0",
    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # Storage
    "chromadb>=0.5.0",
    # Frontend
    "streamlit>=1.38.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Logging
    "loguru>=0.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*", "scripts*"]
